# shuttlings-cch24

./: .env  .gitignore  Cargo.toml  README.md  shuttlings-cch24.postman_collection.json
.sqlx/: query-6b3b14e1f9d95004803971a6acd7bb8e44e57239370dae056146fb13b78c2eec.json  query-a5f5b8fa089426cb866b6a5fbb6b13e2268814ba510c4f7e9eae6cf3d7e7b610.json
src/: main.rs
src/day/: day00.rs  day02.rs  day05.rs  day09.rs  day12.rs  day16.rs  day19.rs  day23.rs  mod.rs
