[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.9", features = ["query", "json"]}
cargo-manifest = "0.17.0"
serde = "1.0.215"
serde_json = "1.0.133"
serde_yaml = "0.9.34"

shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.28.2"
toml = "0.8.19"
