[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.9", features = ["query", "json"]}
axum-macros = "0.4.2"
axum-extra = { version = "0.9.6", features = ["cookie"] }
cargo-manifest = "0.17.0"
chrono = "0.4.39"
jsonwebtoken = "9.3.0"
leaky-bucket = "1.1.2"
parking_lot = "0.12.3"
rand = "0.8.5"
serde = "1.0.215"
serde_json = "1.0.133"
serde_yaml = "0.9.34"

shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["uuid", "chrono"] }
tokio ={ version = "1.28.2" , features = ["full"]}
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.11.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
tera = "1.20.0"
